# CleverSlurm

./: .gitignore  README.md  pyproject.toml
ai_slurm/: config.py  db.py
ai_slurm/ai/: auto.py  client.py  prompts.py  summarize.py
ai_slurm/cli/: aijobs.py  aisbatch.py  aiscancel.py  aisrun.py  aisummarize.py  aitrack.py
ai_slurm/collect/: snapshot.py
ai_slurm/runtime/: ingest.py  wrapper.py
ai_slurm/slurm/: commands.py  tracker.py
doc/: ai_slurm_coding_agent_guide.md
docs/: configuration.md  feishu_setup.md  notifications.md  testing.md
docs/plans/: 2026-05-17-fake-slurm-mvp.md
docs/reference/: ai_slurm_feishu_notification_guide.md  cslurm_coding_agent_guide.md  cslurm_feishu_notification_guide.md
examples/: siliconflow_qwen35_4b_timeout_repro.py
skills/cleverslurm/: SKILL.md
skills/cleverslurm/agents/: openai.yaml
skills/cleverslurm/references/: ai_notifications.md  cluster_safety.md  development.md  usage.md
src/ai_slurm/: config.py  db.py
src/ai_slurm/ai/: ask.py  client.py  prompts.py  summarize.py
src/ai_slurm/cli/: aijobs.py  ainotify.py  aisbatch.py  aisummarize.py
src/ai_slurm/notify/: analysis.py  dispatcher.py  feishu.py  semantic.py
src/cslurm/: auto_track.py  config.py  db.py  shims.py
tests/: conftest.py  real_slurm_support.py  test_ai_ask.py  test_ai_summarizer.py  test_ai_summary.py  test_aijobs.py  test_aisbatch.py  test_aiscancel.py  test_aisrun.py  test_auto_track.py  test_cjobs.py  test_config.py  test_csbatch.py  test_cscancel.py  test_csrun.py  test_dependency_julia.py  test_feishu_notifications.py  test_git_metadata.py  test_model_client.py  test_no_personal_paths.py  test_notification_analysis.py  test_real_slurm_smoke.py  test_real_slurm_support.py  test_runtime_ingest.py  test_runtime_wrapper.py  test_sbatch_options.py  test_shims.py  test_siliconflow_client.py  test_snapshot.py  test_static_analysis.py  test_static_package_imports.py  test_static_script.py  test_tracker.py
(+38 files in other folders)
