[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "CleverSlurm"
version = "0.1.0"
description = "Deterministic Slurm job tracking helpers with fake-Slurm-testable command wrappers."
requires-python = ">=3.10"

[project.scripts]
csbatch = "cslurm.cli.csbatch:main"
cscancel = "cslurm.cli.cscancel:main"
csrun = "cslurm.cli.csrun:main"
cjobs = "cslurm.cli.cjobs:main"
ctrack = "cslurm.cli.ctrack:main"
csummarize = "cslurm.cli.csummarize:main"
cnotify = "cslurm.cli.cnotify:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
